--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -316,6 +316,9 @@ $duration) {
         width: 100%;
         min-height: 100%;
         height: 100%;
+        color: black;
+        clip-path: url(#lightClip);
+        background: red;
     }
     &-svg {
         position: absolute;
@@ -335,8 +338,15 @@ $duration) {
             bottom: 0;
             left: 0;
             margin: 3vh 3vw;
-            height: 38vh;
+            height: 378px; //38vh
         }
+    }
+    &-handle {
+        position: absolute;
+        transform-origin: 19.8% 95%;
+        height: 97.59px;
+        transition: 1s linear transform;
+        transform: rotate(calc(0deg - 25.5deg));
     }
 }
 
