--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -346,8 +346,66 @@ $duration) {
         position: absolute;
         transform-origin: 19.8% 95%;
         height: 97.59px;
-        transition: 1s linear transform;
+        //transition: 1s linear transform;
         transform: rotate(calc(0deg - 25.5deg));
+    }
+    &-comet {
+        position: fixed;
+        left: 0px;
+        top: 50px;
+        width: 1px;
+        height: 1px;
+        background-color: white;
+        position: fixed;
+        animation-name: particleAnimation;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+        &::before {
+            position: absolute;
+            display: block;
+            content: "";
+            width: 100px;
+            right: 1px;
+            top: 0px;
+            height: 1px;
+            background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 0.4) 100%);
+        }
+        &-1 {
+            animation-duration: 10s;
+        }
+        &-2 {
+            animation-duration: 5s;
+            top: 30%;
+        }
+        &-3 {
+            animation-duration: 6s;
+            top: 65%;
+        }
+        &-4 {
+            animation-duration: 7s;
+            top: 80%;
+        }
+    }
+    &-space {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+        &-stars {
+            background: #000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+        }
+        &-twinkling {
+            background: transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+            -moz-animation: move-twink-back 250s linear infinite;
+            -ms-animation: move-twink-back 250s linear infinite;
+            -o-animation: move-twink-back 250s linear infinite;
+            -webkit-animation: move-twink-back 250s linear infinite;
+            animation: move-twink-back 250s linear infinite;
+        }
     }
     &-unit {
         &-gallery {
@@ -355,22 +413,67 @@ $duration) {
             top: 30%;
             left: 30%;
             transform: translateX(-50%) translateY(-50%);
-            width: 200px;
-            height: 200px;
+            width: 300px;
+            height: 300px;
             display: flex;
             background-size: contain;
             background-position: center center;
             background-repeat: no-repeat;
             transition: opacity .25s linear;
-            &-left{
+            &-left {
                 cursor: url(../../assets/precedent.cur), auto;
                 flex: 1;
             }
-            &-right{
+            &-right {
                 cursor: url(../../assets/suivant.cur), auto;
                 flex: 1;
             }
         }
+    }
+}
+
+@keyframes particleAnimation {
+    from {
+        left: -100px;
+    }
+    to {
+        left: calc( 100% + 100px);
+    }
+}
+
+@keyframes move-twink-back {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -10000px 5000px;
+    }
+}
+
+@-webkit-keyframes move-twink-back {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -10000px 5000px;
+    }
+}
+
+@-moz-keyframes move-twink-back {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -10000px 5000px;
+    }
+}
+
+@-ms-keyframes move-twink-back {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: -10000px 5000px;
     }
 }
 
