--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -316,7 +316,7 @@ $duration) {
         min-height: 100%;
         height: 100%;
         color: black;
-        clip-path: url(#lightClip);
+        //clip-path: url(#lightClip);
         //background: red;
         background-image: url("../../assets/space.png");
     }
@@ -428,6 +428,13 @@ $duration) {
                 cursor: url(../../assets/suivant.cur), auto;
                 flex: 1;
             }
+        }
+        &-wibbly{
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            top: 50%;
+            left: 60%;
         }
     }
 }
